tests/ui/methods/call-ambig-trait-object-method.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/call-ambig-trait-object-method.rs:19:7
   |
LL |     x.foo();
   |       ^^^ multiple `foo` found
   |
note: candidate #1 is defined in the trait `T`
  --> $DIR/call-ambig-trait-object-method.rs:6:5
   |
LL |     fn foo(&self);
   |     ^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `(dyn T + 'a)`
  --> $DIR/call-ambig-trait-object-method.rs:10:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^
help: disambiguate the method for candidate #1
   |
LL -     x.foo();
LL +     T::foo(&x);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
